--- a/index.html
+++ b/index.html
@@ -1,42 +1,68 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>BLE连接示例</title>
+    <title>串口通信示例</title>
 </head>
 <body>
-    <button id="connectButton">连接到BLE设备</button>
-    <p id="dataDisplay">读取的数据将显示在这里</p>
+    <button id="connectButton">连接串口</button>
+    <button id="disconnectButton">断开串口</button>
+    <input type="text" id="serialData" placeholder="发送数据">
+    <button id="sendButton">发送数据</button>
+    <div id="receivedData"></div>
 
     <script>
-        const connectButton = document.getElementById("connectButton");
-        const dataDisplay = document.getElementById("dataDisplay");
+        const connectButton = document.getElementById('connectButton');
+        const disconnectButton = document.getElementById('disconnectButton');
+        const serialDataInput = document.getElementById('serialData');
+        const sendButton = document.getElementById('sendButton');
+        const receivedDataDiv = document.getElementById('receivedData');
 
-        let connectedDevice = null;
+        let serialPort;
 
-        connectButton.addEventListener("click", async () => {
+        connectButton.addEventListener('click', async () => {
             try {
-                const device = await navigator.bluetooth.requestDevice({
-                    filters: [{ services: ['49535343-fe7d-4ae5-8fa9-9fafd205e455'] }]
-                });
-
-                const server = await device.gatt.connect();
-
-                // 连接成功后，连接到特定的特征值
-                const service = await server.getPrimaryService('49535343-fe7d-4ae5-8fa9-9fafd205e455');
-                const characteristic = await service.getCharacteristic('49535343-1e4d-4bd9-ba61-23c647249616');
-
-                // 读取特征值的数据
-                const data = await characteristic.readValue();
-
-                // 将数据显示在页面上
-                dataDisplay.textContent = "读取的数据: " + data.buffer;
-                
-                // 存储连接的设备，以便以后操作
-                connectedDevice = device;
+                serialPort = await navigator.serial.requestPort();
+                await serialPort.open({ baudRate: 9600 });
+                receivedDataDiv.textContent = "串口已连接";
             } catch (error) {
-                console.error("连接失败: " + error);
+                console.error('无法连接串口:', error);
             }
         });
+
+        disconnectButton.addEventListener('click', async () => {
+            if (serialPort) {
+                await serialPort.close();
+                receivedDataDiv.textContent = "串口已断开";
+            }
+        });
+
+        sendButton.addEventListener('click', async () => {
+            if (serialPort && serialDataInput.value) {
+                const textEncoder = new TextEncoder();
+                const data = textEncoder.encode(serialDataInput.value);
+                await serialPort.write(data);
+                receivedDataDiv.textContent = "已发送数据: " + serialDataInput.value;
+            }
+        });
+
+        async function receiveData() {
+            while (serialPort.readable) {
+                const data = await serialPort.read();
+                const textDecoder = new TextDecoder();
+                const receivedText = textDecoder.decode(data);
+                receivedDataDiv.textContent = "已接收数据: " + receivedText;
+            }
+        }
+
+        if ('serial' in navigator) {
+            serialPort = await navigator.serial.requestPort();
+            await serialPort.open({ baudRate: 9600 });
+            receivedDataDiv.textContent = "串口已连接";
+
+            receiveData();
+        } else {
+            receivedDataDiv.textContent = "浏览器不支持串口通信";
+        }
     </script>
 </body>
 </html>
